# nadios-bot

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/nadios_bot/: __init__.py  consts.py  data_structures.py  main.py  telegram_utils.py
src/nadios_bot/data/: barby.json  registered_users.json
src/nadios_bot/scarping_handlers/: __init__.py  barby_handler.py  handlers.py  scrap_utils.py  yellow_submarine_handler.py
